--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,13 @@ plugins {
 android {
     compileSdk 32
 
+    buildscript {
+            repositories {
+                google()
+                jcenter()
+            }
+    }
+
     defaultConfig {
         applicationId "com.example.unitconverter"
         minSdk 21
@@ -49,3 +56,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
